<resources>
    <string name="app_name">Storily</string>
    <string name="zeroToThreeYears">0–3 years</string>
    <string name="threeToTen">3–10 years</string>
    <string name="tenToFifteenYears">10+ years</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="story">Story</string>
    <string name="stories_list">Stories List</string>
    <string name="read_story">Read this story</string>
    <string name="stories_for_0_to_3_years_text">Simple stories for kids between 0 to 3 years.</string>
    <string name="stories_for_3_to_10_years">Stories for 3 to 10 year olds. These are easy to understand for kids in this age group.</string>
    <string name="stories_for_all_ages">These stories can be read by all who are above 10 years of age.</string>
    <string name="indian_mythology">Mythological stories</string>
    <string name="indian_mythology_story_description">Stories about Indian mythology for all.</string>
    <string name="inspirational_stories">Inspirational stories</string>
    <string name="inspirational_stories_description">Stories that inspire you.</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="miscellaneous_description">Collection of various stories</string>
    <string name="kids_stories">Kids Stories</string>
    <string name="stories_for_kids_description">Stories for kids of all ages.</string>
    <string name="motivational_stories">Motivational Stories</string>
    <string name="motivational_stories_description">Stories that motivate you.</string>
    <string name="science_stories">Science stories</string>
    <string name="science_stories_description">Science facts and people behind them.</string>
    <string name="planet_stories_description">What\'s cooking in our universe?!</string>
    <string name="planet_stories"><![CDATA[Stars & Planets]]></string>
    <string name="adventure_stories">Adventure Stories</string>
    <string name="adventure_stories_description">A little adventure never hurt anyone.</string>
    <string name="princess_stories">Princess stories</string>
    <string name="princess_stories_description">Stories about various princesses.</string>
    <string name="grandma_stories">Grandma stories</string>
    <string name="grandma_stories_description">Some stories told by our Grandmas.</string>
    <string name="folktale_stories">Folktales</string>
    <string name="folktale_stories_description">Folktales across the world.</string>
    <string name="jokes_stories">Jokes</string>
    <string name="jokes_stories_description">Rib tickling stories.</string>
    <string name="poem_stories">Poems</string>
    <string name="poems_stories_description">Some poems for all.</string>
    <string name="friendship_stories_description">Friends and friendship stories.</string>
    <string name="friendship_stories">Friendship stories</string>
    <string name="tr_stories">Tenali Ram stories</string>
    <string name="tenaliram_stories_description">Stories by famous poet Tenali Rama</string>
    <string name="arabian_night_stories">Arabian night stories</string>
    <string name="arabian_night_stories_description">Middle eastern folktales called Arabian nights.</string>
    <string name="childhood_stories">Childhood stories</string>
    <string name="childhood_stories_description">Stories you might have heard as a child.</string>
    <string name="akbar_birbal">Akbar and Birbal stories</string>
    <string name="exciting_stories_from_akbar_birbal">Exciting stories about Akbar and Birbal.</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="storily_email">Want to talk to us or share your stories, please write to us on \n\"storily14@gmail.com\"</string>
    <string name="about">About</string>
    <string name="about_us_description">Welcome to Storily\u2122, your ultimate place to read offline stories.\nKeep app updated for new stories and exciting features.\n</string>
    <string name="welcome">Welcome to Storily</string>
    <string name="welcome_description">Welcome to Storily, best place to read offline stories. Enjoy and share with others.</string>
    <string name="version">"Version : "</string>
    <string name="search">Search</string>
    <string name="definition_error">Can\'t search. Check if it\'s a name or try again later.</string>
    <string name="network_error">Network issue, please try again later.</string>
    <string name="share">Share App</string>
</resources>