<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_drawer_home_icon"
        android:title="@string/home" />
<!--    <item-->
<!--        android:id="@+id/nav_share"-->
<!--        android:icon="@drawable/ic_share_icon"-->
<!--        android:title="Share" />-->
    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_contact_us_icon"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_icon"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about_us_icon"
        android:title="@string/about" />
</menu>