<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:background="@color/button_bgd"
            android:layout_alignParentTop="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StoryToolBar"
                app:titleTextAppearance="@style/Toolbar_titleText"
                app:title="@string/home">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/llParentLayout"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnZeroToThree"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                style="@style/button_primary_blue_filled"
                android:text="@string/zeroToThreeYears"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnThreeToTen"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp"
                style="@style/button_primary_blue_filled"
                android:text="@string/threeToTen"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnTenToFifteen"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp"
                style="@style/button_primary_blue_filled"
                android:text="@string/tenToFifteenYears"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>